--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,10 @@
     "promise": "~0.2.2",
     "underscore": "~1.8.3",
     "jquery": "~2.1.3",
-    "event-handler": "~1.0.2"
+    "event-handler": "~1.0.2",
+    "promise": "^7.0.0",
+    "underscore": "^1.8.3",
+    "element-kit": "^0.5.0",
+    "module.js": "^1.0.5"
   }
 }
