--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jquery": "^2.1.3",
     "promise": "^7.0.0",
     "resource-manager-js": "^1.0.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "element-kit": "^0.5.0",
+    "module.js": "^1.0.5"
   },
   "devDependencies": {
     "build-tools": "^1.2.7",
