--- a/bower.json
+++ b/bower.json
@@ -26,14 +26,15 @@
   ],
   "main": "src/route-manager.js",
   "dependencies": {
-    "resource-manager-js": "*",
-    "promise": "~0.2.2",
-    "underscore": "~1.8.3",
-    "jquery": "~2.1.3",
-    "event-handler": "~1.0.2",
+    "event-handler": "^1.0.1",
+    "jquery": "^2.1.3",
     "promise": "^7.0.0",
+    "resource-manager-js": "^1.0.1",
     "underscore": "^1.8.3",
     "element-kit": "^0.5.0",
+    "module.js": "^1.0.5",
+    "handlebars": "^3.0.0",
+    "handlebars-helper-slugify": "^0.3.2",
     "module.js": "^1.0.5"
   }
 }
