--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
   },
   "main": "src/route-manager.js",
   "dependencies": {
+    "element-kit": "^0.5.0",
     "event-handler": "^1.0.1",
+    "handlebars": "^3.0.0",
+    "handlebars-helper-slugify": "^0.3.2",
     "jquery": "^2.1.3",
+    "module.js": "^1.0.5",
     "promise": "^7.0.0",
     "resource-manager-js": "^1.0.1",
-    "underscore": "^1.8.3",
-    "element-kit": "^0.5.0",
-    "module.js": "^1.0.5"
+    "underscore": "^1.8.3"
+  },
+  "browser": {
+    "route-manager": "./src/route-manager.js"
   },
   "devDependencies": {
     "build-tools": "^1.2.7",
