--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "main": "src/route-manager.js",
   "dependencies": {
-    "element-kit": "^0.5.0",
+    "element-kit": "^0.x",
     "event-handler": "^1.0.1",
     "handlebars": "^3.0.0",
     "handlebars-helper-slugify": "^0.3.2",
