--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
     "name": "Mark Kennedy",
     "url": "http://heyimmark.com"
   },
+  "keywords": [
+    "route manager",
+    "routing",
+    "route management",
+    "url",
+    "page load",
+    "routing urls",
+    "web app",
+    "dynamic urls",
+    "page load",
+    "dynamic page"
+  ],
+  "license": "MIT",
   "main": "src/route-manager.js",
   "dependencies": {
     "element-kit": "*",
