Installing grunt-cli for travis

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "build-tools": "^1.5.0",
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "sinon": "^1.14.1"
   },
   "scripts": {
