--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "route-manager",
-  "version": "3.2.1",
+  "name": "router-js",
+  "version": "0.0.0",
   "description": "A simple routing framework for web apps",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mkay581/route-manager.git"
+    "url": "git://github.com/mkay581/router-js.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -14,8 +14,9 @@
     "url": "http://heyimmark.com"
   },
   "keywords": [
-    "route manager",
+    "router",
     "routing",
+    "single page app",
     "route management",
     "url",
     "page load",
@@ -26,20 +27,20 @@
     "dynamic page"
   ],
   "license": "MIT",
-  "main": "src/route-manager.js",
+  "main": "src/router.js",
   "dependencies": {
     "element-kit": "^1.0.5",
     "handlebars": "^3.0.0",
     "handlebars-helper-slugify": "^0.3.2",
     "jquery": "^2.1.3",
     "listen-js": "^1.0.1",
-    "module.js": "^2.2.2",
     "promise": "^7.0.0",
     "resource-manager-js": "^1.1.4",
+    "module-js": "^2.2.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "build-tools": "^1.5.0",
+    "build-tools": "^1.6.0",
     "grunt": "~0.4.5",
     "grunt-cli": "^0.1.13",
     "sinon": "^1.14.1"
