--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Mark Kennedy <mkay581@gmail.com>"
   ],
-  "description": "A simple routing framework for web apps",
+  "description": "A simple router for single-page web apps",
   "moduleType": [
     "amd",
     "es6",
@@ -26,11 +26,9 @@
   ],
   "main": "src/router.js",
   "dependencies": {
-    "jquery": "^2.1.3",
-    "resource-manager-js": "^1.1.1",
-    "underscore": "^1.8.3",
-    "module-js": "^3.0.1",
-    "handlebars": "^3.0.0",
-    "listen-js": "~1.1.1"
+    "listen-js": "^1.0.1",
+    "module-js": "^5.1.0",
+    "promise": "^7.0.0",
+    "lodash": "^4.7.0"
   }
 }
