--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "router-js",
   "version": "2.1.0",
-  "description": "A simple routing framework for web apps",
+  "description": "A simple router for single-page web apps",
   "repository": {
     "type": "git",
     "url": "git://github.com/mkay581/router-js.git"
@@ -29,23 +29,15 @@
   "license": "MIT",
   "main": "src/router.js",
   "dependencies": {
-    "element-kit": "^1.0.5",
-    "handlebars": "^3.0.0",
-    "handlebars-helper-slugify": "^0.3.2",
-    "jquery": "^2.1.3",
     "listen-js": "^1.0.1",
-    "module-js": "^3.0.1",
+    "module-js": "^5.1.0",
     "promise": "^7.0.0",
-    "resource-manager-js": "^1.1.4",
-    "underscore": "^1.8.3"
+    "lodash": "^4.7.0"
   },
   "devDependencies": {
-    "build-tools": "^2.2.4",
-    "grunt": "~0.4.5",
-    "grunt-cli": "^0.1.13",
-    "sinon": "~1.16.1"
+    "sinon": "^1.16.1"
   },
   "scripts": {
-    "test": "grunt bt:test"
+    "test": "bt test"
   }
 }
