Fixed regex capture groups bug with some other stuff including:
* Fixed so that requesting a different url that matches a regex captured group loads the new page correctly
* No longer passing down fallback page data to a page's modules, modules should handle this on their own
* Brought back Module class which Router now uses to hijack and handle single page app `<a>` links
* Removed manual history tracking, its better to let the browser do this

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "main": "src/router.js",
   "dependencies": {
     "listen-js": "^1.0.1",
-    "module-js": "^5.1.0",
-    "promise": "^7.1.1",
-    "lodash": "^4.7.0"
+    "lodash": "^4.7.0",
+    "module-js": "^5.4.1",
+    "promise": "^7.1.1"
   },
   "devDependencies": {
     "build-tools": "^3.0.1",
