--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "lodash": "^4.7.0",
     "module-js": "^5.5.2",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "resource-manager-js": "^2.0.3"
   },
   "devDependencies": {
     "build-tools": "^3.0.1",
