--- a/package.json
+++ b/package.json
@@ -30,11 +30,26 @@
   "main": "src/router.js",
   "dependencies": {
     "lodash": "^4.7.0",
-    "module-js": "^5.7.0",
+    "module-js": "^5.8.0",
     "promise": "^7.1.1"
   },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
+  },
   "devDependencies": {
-    "build-tools": "^4.1.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "build-tools": "^4.3.0",
     "sinon": "^1.16.1"
   },
   "scripts": {
