--- a/package.json
+++ b/package.json
@@ -28,12 +28,6 @@
   ],
   "license": "MIT",
   "main": "src/router.js",
-  "dependencies": {
-    "async-promises": "^0.1.2",
-    "lodash": "^4.7.0",
-    "module-js": "^5.9.1",
-    "promise": "^7.1.1"
-  },
   "browserify": {
     "transform": [
       [
@@ -46,11 +40,18 @@
       ]
     ]
   },
-  "devDependencies": {
+  "dependencies": {
+    "async-promises": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "build-tools": "^4.3.0",
+    "lodash": "^4.7.0",
+    "module-js": "^5.15.0",
+    "promise": "^7.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "build-tools": "^6.0.7",
     "sinon": "^1.16.1"
   },
   "scripts": {
