--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
 - "8"
+dist: trusty
+sudo: required
+addons:
+  chrome: stable
+cache:
+  directories:
+  - node_modules
