--- a/package.json
+++ b/package.json
@@ -19,45 +19,43 @@
   "keywords": [
     "router",
     "routing",
-    "single page app",
+    "router element",
     "route management",
-    "url",
-    "page load",
+    "router component",
     "routing urls",
-    "web app",
-    "dynamic urls",
-    "page load",
-    "dynamic page"
+    "lit router",
+    "polymer router"
   ],
   "license": "MIT",
-  "main": "src/router.js",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
-  },
-  "dependencies": {
-    "async-promises": "^0.1.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "lodash": "^4.7.0",
-    "module-js": "^5.15.0",
-    "promise": "^7.1.1"
-  },
+  "main": "dist/router.js",
+  "types": "src/router.ts",
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "build-tools": "^6.0.7",
-    "sinon": "^1.16.1"
+    "@types/youtube": "0.0.34",
+    "banner-cli": "0.11.1",
+    "chai": "^4.1.2",
+    "eslint": "^5.5.0",
+    "karma": "^3.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-rollup-preprocessor": "^6.0.1",
+    "mocha": "^5.2.0",
+    "rollup": "^0.65.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-typescript": "^0.8.1",
+    "sinon": "^6.2.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3",
+    "uglify-es": "^3.3.9"
   },
   "scripts": {
-    "test": "bt test"
+    "test": "karma start karma.conf.js && tslint src/**/*",
+    "test-server": "karma start karma.conf.js --single-run=false",
+    "preversion": "npm test",
+    "minify": "uglifyjs dist/router.js -o dist/router.min.js",
+    "build-dist": "rm -rf dist/* && rollup -c && npm run minify",
+    "version": "npm run build-dist && banner-cli dist/*.js && git add -A dist",
+    "postversion": "git push && git push --tags",
+    "start-dev": "rollup -c --watch"
   }
 }
