--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "router-webcomponent",
-  "version": "0.0.1",
+  "name": "router-component",
+  "version": "0.0.2",
   "description": "A simple router for web components",
   "repository": {
     "type": "git",
