--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rollup": "^0.65.2",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-typescript": "^0.8.1",
+    "sinon": "^6.3.4",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
     "uglify-es": "^3.3.9"
