--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup-plugin-typescript": "^0.8.1",
     "sinon": "^6.3.4",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.0.3",
     "uglify-es": "^3.3.9"
   },
