--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple router for web components",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mkay581/router-component.git"
+    "url": "https://github.com/mkay581/router-component.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
