--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple router for web components",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mkay581/router-component.git"
+    "url": "https://github.com/mkay581/router-component.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -30,7 +30,7 @@
     "@types/youtube": "0.0.34",
     "banner-cli": "0.11.1",
     "chai": "^4.1.2",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
