--- a/package.json
+++ b/package.json
@@ -29,20 +29,21 @@
   "devDependencies": {
     "@types/youtube": "0.0.34",
     "banner-cli": "0.11.1",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
+    "http-server": "^0.11.1",
     "karma": "^3.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-rollup-preprocessor": "^6.0.1",
+    "karma-rollup-preprocessor": "^6.1.0",
     "mocha": "^5.2.0",
-    "rollup": "^0.65.2",
+    "rollup": "^0.67.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-typescript": "^1.0.0",
     "sinon": "^7.1.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.6",
     "uglify-es": "^3.3.9"
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "version": "npm run build-dist && banner-cli dist/*.js && git add -A dist",
     "postversion": "git push && git push --tags",
     "start": "rollup -c --watch",
-    "lint": "tslint src/**/*"
+    "lint": "tslint src/**/*",
+    "start-server": "http-server ./ -p 3239"
   }
 }
