--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "uglify-es": "^3.3.9"
   },
   "scripts": {
-    "test": "karma start karma.conf.js && tslint src/**/*",
+    "test": "karma start karma.conf.js && npm run lint",
     "test-server": "karma start karma.conf.js --single-run=false",
     "preversion": "npm test",
     "minify": "uglifyjs dist/router-component.js -o dist/router-component.min.js",
     "build-dist": "rm -rf dist/* && rollup -c && npm run minify",
     "version": "npm run build-dist && banner-cli dist/*.js && git add -A dist",
     "postversion": "git push && git push --tags",
-    "start": "rollup -c --watch"
+    "start": "rollup -c --watch",
+    "lint": "tslint src/**/*"
   }
 }
