--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
   "singleQuote": true,
   "tabWidth": 4,
   "jsxBracketSameLine": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "overrides": [
+      {
+          "files": "*.json",
+          "options": {
+              "tabWidth": 2
+          }
+      }
+  ]
 }
