--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
   ],
   "license": "MIT",
   "main": "dist/router-component.js",
-  "types": "src/router-component.ts",
+  "types": "dist/router-component.d.ts",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "@types/sinon": "^7.0.3",
     "@types/youtube": "0.0.34",
     "banner-cli": "0.11.1",
     "chai": "^4.2.0",
     "http-server": "^0.11.1",
     "karma": "^3.1.1",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-rollup-preprocessor": "^6.1.0",
+    "karma-typescript": "^3.0.13",
     "mocha": "^5.2.0",
     "rollup": "^0.67.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-typescript": "^1.0.0",
     "sinon": "^7.1.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
@@ -57,5 +58,8 @@
     "start": "rollup -c --watch",
     "lint": "tslint src/**/*",
     "start-server": "http-server ./ -p 3239"
+  },
+  "dependencies": {
+    "rollup-plugin-typescript2": "^0.18.1"
   }
 }
