--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,16 @@
   "compilerOptions": {
     "target": "es6",
     "module": "esnext",
-    "moduleResolution": "node"
+    "declaration": true,
+    "moduleResolution": "node",
+    "lib": [
+      "es5",
+      "es6",
+      "es2015",
+      "dom"
+    ]
   },
   "include": [
     "src/**/*"
-  ],
-  "lib": [
-    "es5",
-    "es6",
-    "es2015",
-    "dom"
-  ],
-  "typeRoots": [
-    "types"
   ]
 }
