change main to module in package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "polymer router"
   ],
   "license": "MIT",
-  "main": "dist/router-component.js",
+  "module": "dist/router-component.js",
   "types": "dist/router-component.d.ts",
   "devDependencies": {
     "@types/chai": "^4.1.7",
