--- a/package.json
+++ b/package.json
@@ -61,9 +61,8 @@
     "test-server": "karma start karma.conf.js --single-run=false",
     "preversion": "npm test",
     "minify": "uglifyjs dist/router-component.js -o dist/router-component.min.js",
-    "build-dist": "rm -rf dist/* && rollup -c && npm run minify",
-    "version": "npm run build-dist && banner-cli dist/*.js && git add -A dist",
-    "postversion": "git push && git push --tags",
+    "build": "rm -rf dist/* && rollup -c && npm run minify",
+    "banner": "banner-cli dist/*.js",
     "start": "rollup -c --watch",
     "lint": "tslint src/**/*",
     "start-server": "http-server ./ -p 3239"
