--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "router-component",
-  "version": "0.8.2",
+  "version": "0.9.0-alpha.0",
   "description": "A simple, declarative router for web components",
   "repository": {
     "type": "git",
