--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "router-component",
-  "version": "0.8.2",
+  "version": "0.9.0-alpha.0",
   "description": "A simple, declarative router for web components",
   "repository": {
     "type": "git",
@@ -36,19 +36,23 @@
   "module": "dist/router-component.js",
   "types": "dist/router-component.d.ts",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@open-wc/karma-esm": "^2.5.6",
+    "@open-wc/testing": "^2.3.3",
     "@types/mocha": "^5.2.7",
     "@types/sinon": "^7.0.13",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "banner-cli": "^0.14.0",
-    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "http-server": "^0.11.1",
-    "karma": "^4.2.0",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "^3.0.0",
+    "karma-coverage": "^2.0.1",
     "karma-mocha": "^1.3.0",
     "karma-typescript": "^4.1.1",
+    "lit-html": "^1.1.2",
     "mocha": "^6.2.0",
     "rollup": "^1.18.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -69,5 +73,7 @@
     "lint": "eslint '**/*.{js,ts}'",
     "start-server": "http-server ./ -p 3239"
   },
-  "dependencies": {}
+  "dependencies": {
+    "query-selector-shadow-dom": "^0.3.3"
+  }
 }
