--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.7.2",
     "@open-wc/karma-esm": "^2.9.8",
     "@open-wc/testing": "^2.3.9",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
@@ -55,7 +56,6 @@
     "lit-html": "^1.1.2",
     "mocha": "^7.1.1",
     "rollup": "^1.26.5",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "sinon": "^9.0.1",
     "tslint-config-prettier": "^1.18.0",
