--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "main": "dist/router-component.common.js",
   "module": "dist/router-component.js",
   "types": "dist/router-component.d.ts",
+  "files": ["dist/**/*"],
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
