--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "preversion": "npm test",
     "minify": "uglifyjs dist/router-component.js -o dist/router-component.min.js",
     "build": "rm -rf dist/* && rollup -c && npm run minify && npm run banner",
-    "banner": "banner-cli dist/*.js",
+    "banner": "banner-cli dist/**/*.js",
     "start": "rollup -c --watch",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:format": "prettier --check '**/*'",
