--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
-    "@open-wc/karma-esm": "^2.9.8",
+    "@open-wc/karma-esm": "^2.13.22",
     "@open-wc/testing": "^2.3.9",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/mocha": "^7.0.2",
@@ -69,8 +69,8 @@
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "test": "karma start karma.conf.js && npm run lint",
-    "test-server": "karma start karma.conf.js --single-run=false",
+    "test": "karma start karma.conf.js --single-run && npm run lint",
+    "test-server": "karma start karma.conf.js",
     "preversion": "npm test",
     "build": "rm -rf dist/* && rollup -c && npm run banner",
     "banner": "banner-cli dist/**/*.js",
