--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,4 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
-  open-pull-requests-limit: 15
+    interval: monthly
