--- a/package.json
+++ b/package.json
@@ -40,23 +40,17 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "@open-wc/karma-esm": "^4.0.0",
     "@open-wc/testing": "^2.5.19",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/mocha": "^8.0.2",
     "@types/sinon": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "@web/dev-server-esbuild": "^0.2.12",
+    "@web/test-runner": "^0.13.5",
     "banner-cli": "^0.14.1",
     "eslint": "^7.0.0",
     "husky": "^6.0.0",
-    "karma": "^5.2.3",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.1",
-    "karma-mocha": "^2.0.0",
-    "karma-typescript": "^5.0.1",
     "lit-html": "^1.1.2",
     "mocha": "^8.0.1",
     "prettier": "^2.0.2",
@@ -68,8 +62,8 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "karma start karma.conf.js --single-run && npm run lint",
-    "test-server": "karma start karma.conf.js",
+    "test": "npm run test:src && npm run lint",
+    "test:src": "web-test-runner",
     "preversion": "npm test",
     "build": "rm -rf dist/* && rollup -c && npm run banner",
     "banner": "banner-cli dist/**/*.js",
