--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "homepage": "https://github.com/markcellus/router-component",
-  "author": "Mark Kennedy <mark@heyimmark.com> (heyimmark.com)",
+  "author": "Mark",
   "engines": {
     "node": "14.x"
   },
