Revert "Force Node 14 to prevent inadvertent lock file changes"
This reverts commit 08e412c3df418e8e180d099abfbb3bdd8fb682b1.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/markcellus/router-component",
   "author": "Mark",
   "engines": {
-    "node": "14.x"
+    "node": ">=14"
   },
   "keywords": [
     "lit router",
